--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.google.com/specimen/Share+Tech?selection.family=Share+Tech">
         <title>Rrrrobotum!</title>
     </head>
     <body>
@@ -9,13 +11,22 @@
             <h1>
             Robotum
             </h1>
+            <a href="#"><img src="chevron.png" class="h-image"/></a>
             <h2>
                 For you, ¡and your robofriends!
             </h2>
         </header>
 
-        <img src="robot.jpg" class="robot" /> 
-        <img src="robot-2.jpg" class="robot-2" />
+        <img src="robot.jpg" class="robot"   />
+        <img src="robot-2.jpg" class="robot-2" id="tobot2" />
         <p>hola soy dios</p>
+        <audio controls>
+            <source src="pokemon-battle.mp3" />
+        </audio>
+        <canvas id="scenario" width="673" height="200">
+            <img src="robot.jpg" width="100" height="100" id="tobot">
+            <img src="robot-2.jpg" width="100" height="100" id="tobot2">
+        </canvas>
+        <script src="game.js" type="text/javascript"></script>
     </body>
 </html>
